paper_experimental_results/2026-05-10T00-24-35/grok-code-fast-1/preprocessing_directives/scope_of_macro_5/sample_005/target.compile.log
error: usage of an `unsafe` block
 --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/preprocessing_directives/scope_of_macro_5/sample_005/target.rs:4:17
  |
4 |     let mut x = unsafe { RNG_STATE };
  |                 ^^^^^^^^^^^^^^^^^^^^
  |
  = note: requested on the command line with `-F unsafe-code`

error: usage of an `unsafe` block
 --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/preprocessing_directives/scope_of_macro_5/sample_005/target.rs:8:5
  |
8 |     unsafe { RNG_STATE = x };
  |     ^^^^^^^^^^^^^^^^^^^^^^^^

error[E0277]: `main` has invalid return type `i32`
   --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/preprocessing_directives/scope_of_macro_5/sample_005/target.rs:167:14
    |
167 | fn main() -> i32 {
    |              ^^^ `main` can only return types that implement `Termination`
    |
    = help: consider using `()`, or a `Result`

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0277`.